
14-Jun-2010 Jean-Marie Simonet
[#21007] Alias in list views does not support RTL. Thanks Andrew.
$ Consolidated "Alias" value.
$ Consolidating for RTL support the Filter string/value in back-end
$ Consolidated "Description" value + some.
# [#20979] single contact - enable show contact list. Thanks Tim.

14-Jun-2010 Mark Dexter
 # [#21008] Hide new login button just introduced to login screen

14-Jun-2010 Andrew Eddie
 # Fixed issue [#20884] banner manager export not working fatal error (Rob Joyce, Phil Snell).

13-Jun-2010 Ron Severdia
^ Fixed select user button (Thanks Tim Plummer)
# Reverting BlueStork error.php changes from previous commit. Will break until params bug is fixed.
^ Relocate note & language fields to panel in Category & Article Manager (Thanks Tim Plummer)
# News feed language fixes
# Fixed template params in error.php (reverted until fixed)
# Fixed CSS on ACL panel
^ Sync up label CSS
^ Little clean up and commenting in BlueStork CSS
^ Relocate language dropdown in news feed (Thanks Tim Plummer)

13-Jun-2010 Jean-Marie Simonet
$ Normalizing Cpanel link in all admin error.php
# Reverting part of new bluestork error.php [Revision 17643] as it breaks error display.
# [#20992] [patch] Toolbar may generate code that is not well formed. Thanks Rouven.
$ [#20991] Change Metadata to Metadata Options. Thanks Michael.
# [#20996] Hathor CSS font-size fixes. Thanks Andrea.

12-Jun-2010 Mark Dexter
# Fix asset table problems in sample data (Elin Waring)

12-Jun-2010 Ron Severdia
# Fixed category header (Thanks Babs Gosgens)
^ Fixed weblinks header icon (Thanks Tim Plummer)
^ Move language dropdown to panel (Thanks Tim Plummer)
^ [#20618] Fixed IE login bug 
# Fixed modal widths (contents still need love)
# [#20640] Fixed favicon MIME type (Thanks Rouven Wesling)
^ Changed order icon to bg CSS and added inactive state
# Fixed required indicator on IE
^ Changed layout to 60/40 on edit banner client & edit contact
- Removed deprecated IE6 stylesheet