@@ -26,7 +26,7 @@ class plgUserProfile extends JPlugin
 	function onContentPrepareData($context, $data)
 	{
 		// Check we are manipulating a valid form.
-		if (!in_array($context, array('com_users.profile', 'com_users.user'))) {
+		if (!in_array($context, array('com_users.profile', 'com_users.registration'))) {
 			return true;
 		}
 
@@ -73,100 +73,189 @@ class plgUserProfile extends JPlugin
 			$this->_subject->setError('JERROR_NOT_A_FORM');
 			return false;
 		}
-
 		// Check we are manipulating a valid form.
-		$form_name = $form->getName();
-		if (!in_array($form_name, array('com_users.profile', 'com_users.user', 'com_users.registration'))) {
+		if (!in_array($form->getName(), array('com_users.profile', 'com_users.registration','com_users.user'))) {
 			return true;
 		}
-
-		// Add the profile fields to the form.
-		JForm::addFormPath(dirname(__FILE__).'/profiles');
-		$form->loadFile('profile', false);
-
-		list($component, $name) = explode('.',$form_name);
-		// Toggle whether the address1 field is required.
-		if ($this->params->get($name.'-require_address1', 1) > 0) {
-			$form->setFieldAttribute('address1', 'required', $this->params->get($name.'-require_address1') == 2, 'profile');
-		} else {
-			$form->removeField('address1', 'profile');
+		if ($form->getName()=='com_users.profile')
+		{
+			// Add the profile fields to the form.
+			JForm::addFormPath(dirname(__FILE__).'/profiles');
+			$form->loadFile('profile', false);
+	
+			// Toggle whether the address1 field is required.
+			if ($this->params->get('profile-require_address1', 1) > 0) {
+				$form->setFieldAttribute('address1', 'required', $this->params->get('profile-require_address1') == 2, 'profile');
+			} else {
+				$form->removeField('address1', 'profile');
+			}
+	
+			// Toggle whether the address2 field is required.
+			if ($this->params->get('profile-require_address2', 1) > 0) {
+				$form->setFieldAttribute('address2', 'required', $this->params->get('profile-require_address2') == 2, 'profile');
+			} else {
+				$form->removeField('address2', 'profile');
+			}
+	
+			// Toggle whether the city field is required.
+			if ($this->params->get('profile-require_city', 1) > 0) {
+				$form->setFieldAttribute('city', 'required', $this->params->get('profile-require_city') == 2, 'profile');
+			} else {
+				$form->removeField('city', 'profile');
+			}
+	
+			// Toggle whether the region field is required.
+			if ($this->params->get('profile-require_region', 1) > 0) {
+				$form->setFieldAttribute('region', 'required', $this->params->get('profile-require_region') == 2, 'profile');
+			} else {
+				$form->removeField('region', 'profile');
+			}
+	
+			// Toggle whether the country field is required.
+			if ($this->params->get('profile-require_country', 1) > 0) {
+				$form->setFieldAttribute('country', 'required', $this->params->get('profile-require_country') == 2, 'profile');
+			} else {
+				$form->removeField('country', 'profile');
+			}
+	
+			// Toggle whether the postal code field is required.
+			if ($this->params->get('profile-require_postal_code', 1) > 0) {
+				$form->setFieldAttribute('postal_code', 'required', $this->params->get('profile-require_postal_code') == 2, 'profile');
+			} else {
+				$form->removeField('postal_code', 'profile');
+			}
+	
+			// Toggle whether the phone field is required.
+			if ($this->params->get('profile-require_phone', 1) > 0) {
+				$form->setFieldAttribute('phone', 'required', $this->params->get('profile-require_phone') == 2, 'profile');
+			} else {
+				$form->removeField('phone', 'profile');
+			}
+	
+			// Toggle whether the website field is required.
+			if ($this->params->get('profile-require_website', 1) > 0) {
+				$form->setFieldAttribute('website', 'required', $this->params->get('profile-require_website') == 2, 'profile');
+			} else {
+				$form->removeField('website', 'profile');
+			}
+	
+			// Toggle whether the favoritebook field is required.
+			if ($this->params->get('profile-require_favoritebook', 1) > 0) {
+				$form->setFieldAttribute('favoritebook', 'required', $this->params->get('profile-require_favoritebook') == 2, 'profile');
+			} else {
+				$form->removeField('favoritebook', 'profile');
+			}
+	
+			// Toggle whether the aboutme field is required.
+			if ($this->params->get('profile-require_aboutme', 1) > 0) {
+				$form->setFieldAttribute('aboutme', 'required', $this->params->get('profile-require_aboutme') == 2, 'profile');
+			} else {
+				$form->removeField('aboutme', 'profile');
+			}
+			// Toggle whether the tos field is required.
+			if ($this->params->get('profile-require_tos', 1) > 0) {
+				$form->setFieldAttribute('tos', 'required', $this->params->get('profile-require_tos') == 2, 'profile');
+			} else {
+				$form->removeField('tos', 'profile');
+			}
+			// Toggle whether the dob field is required.
+			if ($this->params->get('profile-require_dob', 1) > 0) {
+				$form->setFieldAttribute('dob', 'required', $this->params->get('profile-require_dob') == 2, 'profile');
+			} else {
+				$form->removeField('dob', 'profile');
+			}
+			return true;
 		}
-
-		// Toggle whether the address2 field is required.
-		if ($this->params->get($name.'-require_address2', 1) > 0) {
-			$form->setFieldAttribute('address2', 'required', $this->params->get($name.'-require_address2') == 2, 'profile');
-		} else {
-			$form->removeField('address2', 'profile');
-		}
-
-		// Toggle whether the city field is required.
-		if ($this->params->get($name.'-require_city', 1) > 0) {
-			$form->setFieldAttribute('city', 'required', $this->params->get($name.'-require_city') == 2, 'profile');
-		} else {
-			$form->removeField('city', 'profile');
-		}
-
-		// Toggle whether the region field is required.
-		if ($this->params->get($name.'-require_region', 1) > 0) {
-			$form->setFieldAttribute('region', 'required', $this->params->get($name.'-require_region') == 2, 'profile');
-		} else {
-			$form->removeField('region', 'profile');
-		}
-
-		// Toggle whether the country field is required.
-		if ($this->params->get($name.'-require_country', 1) > 0) {
-			$form->setFieldAttribute('country', 'required', $this->params->get($name.'-require_country') == 2, 'profile');
-		} else {
-			$form->removeField('country', 'profile');
-		}
-
-		// Toggle whether the postal code field is required.
-		if ($this->params->get($name.'-require_postal_code', 1) > 0) {
-			$form->setFieldAttribute('postal_code', 'required', $this->params->get($name.'-require_postal_code') == 2, 'profile');
-		} else {
-			$form->removeField('postal_code', 'profile');
-		}
-
-		// Toggle whether the phone field is required.
-		if ($this->params->get($name.'-require_phone', 1) > 0) {
-			$form->setFieldAttribute('phone', 'required', $this->params->get($name.'-require_phone') == 2, 'profile');
-		} else {
-			$form->removeField('phone', 'profile');
-		}
-
-		// Toggle whether the website field is required.
-		if ($this->params->get($name.'-require_website', 1) > 0) {
-			$form->setFieldAttribute('website', 'required', $this->params->get($name.'-require_website') == 2, 'profile');
-		} else {
-			$form->removeField('website', 'profile');
-		}
-
-		// Toggle whether the favoritebook field is required.
-		if ($this->params->get($name.'-require_favoritebook', 1) > 0) {
-			$form->setFieldAttribute('favoritebook', 'required', $this->params->get($name.'-require_favoritebook') == 2, 'profile');
-		} else {
-			$form->removeField('favoritebook', 'profile');
-		}
-
-		// Toggle whether the aboutme field is required.
-		if ($this->params->get($name.'-require_aboutme', 1) > 0) {
-			$form->setFieldAttribute('aboutme', 'required', $this->params->get($name.'-require_aboutme') == 2, 'profile');
-		} else {
-			$form->removeField('aboutme', 'profile');
-		}
-		// Toggle whether the tos field is required.
-		if ($this->params->get($name.'-require_tos', 1) > 0) {
-			$form->setFieldAttribute('tos', 'required', $this->params->get($name.'-require_tos') == 2, 'profile');
-		} else {
-			$form->removeField('tos', 'profile');
-		}
-		// Toggle whether the dob field is required.
-		if ($this->params->get($name.'-require_dob', 1) > 0) {
-			$form->setFieldAttribute('dob', 'required', $this->params->get($name.'-require_dob') == 2, 'profile');
-		} else {
-			$form->removeField('dob', 'profile');
-		}
-		return true;
+		//In this example, we treat the frontend registration and the back end user create or edit as the same. 
+		elseif ($form->getName()=='com_users.registration' || $form->getName()=='com_users.user' )
+		{		
+			// Add the registration fields to the form.
+			JForm::addFormPath(dirname(__FILE__).'/profiles');
+			$form->loadFile('profile', false);
+			
+			// Toggle whether the address1 field is required.
+			if ($this->params->get('register-require_address1', 1) > 0) {
+				$form->setFieldAttribute('address1', 'required', $this->params->get('register-require_address1') == 2, 'profile');
+			} else {
+				$form->removeField('address1', 'profile');
+			}
+	
+			// Toggle whether the address2 field is required.
+			if ($this->params->get('register-require_address2', 1) > 0) {
+				$form->setFieldAttribute('address2', 'required', $this->params->get('register-require_address2') == 2, 'profile');
+			} else {
+				$form->removeField('address2', 'profile');
+			}
+	
+			// Toggle whether the city field is required.
+			if ($this->params->get('register-require_city', 1) > 0) {
+				$form->setFieldAttribute('city', 'required', $this->params->get('register-require_city') == 2, 'profile');
+			} else {
+				$form->removeField('city', 'profile');
+			}
+	
+			// Toggle whether the region field is required.
+			if ($this->params->get('register-require_region', 1) > 0) {
+				$form->setFieldAttribute('region', 'required', $this->params->get('register-require_region') == 2, 'profile');
+			} else {
+				$form->removeField('region', 'profile');
+			}
+	
+			// Toggle whether the country field is required.
+			if ($this->params->get('register-require_country', 1) > 0) {
+				$form->setFieldAttribute('country', 'required', $this->params->get('register-require_country') == 2, 'profile');
+			} else {
+				$form->removeField('country', 'profile');
+			}
+	
+			// Toggle whether the postal code field is required.
+			if ($this->params->get('register-require_postal_code', 1) > 0) {
+				$form->setFieldAttribute('postal_code', 'required', $this->params->get('register-require_postal_code') == 2, 'profile');
+			} else {
+				$form->removeField('postal_code', 'profile');
+			}
+	
+			// Toggle whether the phone field is required.
+			if ($this->params->get('register-require_phone', 1) > 0) {
+				$form->setFieldAttribute('phone', 'required', $this->params->get('register-require_phone') == 2, 'profile');
+			} else {
+				$form->removeField('phone', 'profile');
+			}
+	
+			// Toggle whether the website field is required.
+			if ($this->params->get('register-require_website', 1) > 0) {
+				$form->setFieldAttribute('website', 'required', $this->params->get('register-require_website') == 2, 'profile');
+			} else {
+				$form->removeField('website', 'profile');
+			}
+	
+			// Toggle whether the favoritebook field is required.
+			if ($this->params->get('register-require_favoritebook', 1) > 0) {
+				$form->setFieldAttribute('favoritebook', 'required', $this->params->get('register-require_favoritebook') == 2, 'profile');
+			} else {
+				$form->removeField('favoritebook', 'profile');
+			}
+	
+			// Toggle whether the aboutme field is required.
+			if ($this->params->get('register-require_aboutme', 1) > 0) {
+				$form->setFieldAttribute('aboutme', 'required', $this->params->get('register-require_aboutme') == 2, 'profile');
+			} else {
+				$form->removeField('aboutme', 'profile');
+			}
+			// Toggle whether the tos field is required.
+			if ($this->params->get('register-require_tos', 1) > 0) {
+				$form->setFieldAttribute('tos', 'required', $this->params->get('register-require_tos') == 2, 'profile');
+			} else {
+				$form->removeField('tos', 'profile');
+			}
+			// Toggle whether the dob field is required.
+			if ($this->params->get('register-require_dob', 1) > 0) {
+				$form->setFieldAttribute('dob', 'required', $this->params->get('register-require_dob') == 2, 'profile');
+			} else {
+				$form->removeField('dob', 'profile');
+			}
+			return true;
+		}			
 	}
 
 	function onUserAfterSave($data, $isNew, $result, $error)
